--- a/views/index.jade
+++ b/views/index.jade
@@ -4,12 +4,17 @@ block content
   h1= title
   p Welcome to #{title}
   div
-    canvas(id="canvas" height='500', width='1000')
+    canvas(id="canvas" height="500", width="1000")
   div
     form
       label(for="shape") Choose Shape:
       select(id="shape" name="shape")
         option(id="rectangle" name="rectangle") Square
-        option(id="rectangle" name="rectangle") Rectangle
+        option(id="square" name="square") Rectangle
+        option(id="circle" name="circle") Circle
       label(for="color") Choose Color:
-        
+      select(id="color" name="color")
+        option(id="red" name="red") Red
+        option(id="blue" name="blue") Blue
+        option(id="yellow" name="yellow") Yellow
+          
