crude random output

--- a/views/index.jade
+++ b/views/index.jade
@@ -17,4 +17,5 @@ block content
         option(id="red" name="red") Red
         option(id="blue" name="blue") Blue
         option(id="yellow" name="yellow") Yellow
+      button(type="button" name="random" id="random" ) Random Output
           
