mvp refactor needed

--- a/views/index.jade
+++ b/views/index.jade
@@ -16,7 +16,9 @@ block content
       input(type="color" name="color" id="color") 
       label(for="width") Width
         input(type='range', min='0', max='400' id="width")
-
-      
       button(type="button" name="random" id="random" ) Random Output
+      button(type="button" name="clear" id="clear" ) Clear
+      button(type="button" name="randomC" id="randomC" ) Random Color
+      button(type="button" name="reset" id="reset" ) Reset Color
+      
           
